--- a/css/banner.css
+++ b/css/banner.css
@@ -82,11 +82,23 @@
 
 /*_____________________________*/
 
+@media only screen and (max-width: 540px) {
+ 
+	.banner {
+	width: 350px;
+	height: 233.3px;
+	background-image: url("../img/banner/banner2.jpg");
+}
+}
+
+
+
 @media only screen and (max-width: 440px) {
  
 	.banner {
 	width: 300px;
-	height: 75px;
+	height: 200px;
+	background-image: url("../img/banner/banner2.jpg");
 }
 }
 
@@ -94,6 +106,7 @@
  
 	.banner {
 	width: 250px;
-	height: 62.5px;
+	height: 166.6px;
+	background-image: url("../img/banner/banner2.jpg");
 }
 }
