--- a/css/container.css
+++ b/css/container.css
@@ -19,3 +19,46 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+/*--------------footer----------------------------*/
+.footer_container{
+	width: 100%;
+	height: 300px;
+	left: 0px;
+	right: 0px;
+	background-color: black;
+	background-position: ;
+	background-size: ;
+	background-image: url("../img/background/bg.png");
+}
+
+
+@media only screen and (max-width: 1000px) {
+
+	.footer_container{
+	background-color: black;
+	background-position: ;
+		background-repeat: no-repeat;
+	background-size: cover;
+	background-image: url("../img/background/bg.png");
+}
+}
+
+
+
+/*---------------subcontainer_----------------------*/
+
+
+.sub_container{
+	width: 1000px;
+}
