--- a/css/container.css
+++ b/css/container.css
@@ -1,6 +1,5 @@
 /*--------------Container----------------------------*/
 .container{
-	height: 1000px;
 	bottom: 0px;
 	margin-left: 10px;
 	margin-right: 10px;
@@ -18,14 +17,12 @@
 }
 
 
+/*---------------subcontainer_----------------------*/
 
 
-
-
-
-
-
-
+.sub_container{
+	width: 85%;
+}
 
 
 
@@ -40,6 +37,10 @@
 	background-position: ;
 	background-size: ;
 	background-image: url("../img/background/bg.png");
+	
+	
+	padding: 20px 20px;
+	
 }
 
 
@@ -55,10 +56,3 @@
 }
 
 
-
-/*---------------subcontainer_----------------------*/
-
-
-.sub_container{
-	width: 1000px;
-}
