--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,6 @@ a{
 }
 
 
-/*---------------Header texts and parah---------------*/
-p{
-	text-align: justify;
-	font-size: 20px;
-}
-
-
-h1{
-	font-size: 40px;
-	font-family: Arial;
-	text-transform: uppercase;
-	font-weight: 400;
-	margin: 10px;
-}
-
-
 
 
 /*---------------buttons-----------------*/
@@ -81,7 +65,6 @@ h1{
 
 
 
-/*--------------button 2-----------------------*/
 
 
 /*--------------Devider-----------------------*/
@@ -93,9 +76,91 @@ h1{
 	margin: 0px;
 }
 
+.devider_silver{
+	width: 100%;
+	height: 2px;
+	border-top: 0.1px solid rgba(9,74,96,0.26);
+	margin-bottom: 30px;
+}
+
+
+
 /*--------------sellection-----------------------*/
 
 ::selection{
   color: white;
   background: #EC2D48;
 }
+
+
+/*--------------Service home-----------------------*/
+.service_div{
+	border-radius: 3px;
+	font-family:Times New Roman;
+	width: 320px;
+	height: 340px;
+	border: 1px solid rgba(115,115,115,0.78);
+	margin: 15px;
+
+	padding-top: 40px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.service_inner{
+
+}
+
+.service_div i{
+	font-size: 40px; 
+	color: #363636;
+	margin: 10px;
+}
+
+p1{
+	font-family: arial;
+	text-align: justify;
+	font-size: 13px;
+	color: rgba(103,103,103,1.00);
+	margin-top: 0px;
+}
+h2{
+	
+	text-transform:;
+	font-weight: 400;
+	margin: 3px;
+}
+/*--------------button 2-----------------------*/
+.button2{
+	margin: 20px;
+	font-family: Arial;
+	padding: 10px 30px ;
+	
+	border: 1px solid #002633;
+	background-position
+}
+
+.button2:hover{
+	color: white;
+	background-color: #002633;
+	cursor: pointer;
+}
+
+/*---------------Header texts and parah---------------*/
+p{
+	text-align: justify;
+	font-size: 20px;
+}
+
+
+
+h1{
+	font-size: 40px;
+	font-family: Arial;
+	text-transform: uppercase;
+	font-weight: 400;
+	margin: 10px;
+}
+
+
+
