--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	
+	z-index:1;
 }
 
 .top_header{
@@ -226,7 +226,7 @@
 	
 	display: flex;
   	justify-content: center;
-	
+	z-index:1;
 	display: nne;
 }
 
