--- a/css/header.css
+++ b/css/header.css
@@ -84,7 +84,7 @@
 /*-------TOP-------Navigation----------------------------*/
 .nav a:link, a:visited{
 	text-decoration: none;
-	color: #0E6C5b;
+	color: #888888;
 }
 
 .nav a:hover{
