--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
 /*--------------footer----------------------------*/
 .footer_container{
 	width: 100%;
-	height: 540px;
+	height: 560px;
 	left: 0px;
 	right: 0px;
 	background-color: #1D1D1D;
@@ -11,8 +11,9 @@
 	background-size: ;
 	background-image: url("../img/background/.png");
 	
-	
+	bottom: 0px;
 	padding-top: 30px;
+	padding-bottom: 0px;
 	
 }
 
@@ -45,7 +46,12 @@
 
 
 
-
+.copy_right{
+	color: white; 
+	font-size:12px; 
+	text-align: center;
+	font-family: arial;
+}
 
 
 
@@ -59,6 +65,11 @@
 		height: 400px;
 	}
 	
+	.footer_container{
+	height: 500px;
+	}
+	
+	
 }
 
 @media only screen and (max-width: 1170px){
@@ -67,12 +78,20 @@
 		height: 300px;
 	}
 	
+	.footer_container{
+	height: 400px;
+	}
+	
 }
 
 @media only screen and (max-width: 1100px){
 	.map_iframe{
 		width: 750px;
 		height: 300px;
+	}
+	
+	.footer_container{
+	height: 630px;
 	}
 	
 }
@@ -92,7 +111,7 @@
 
 @media only screen and (max-width: 780px){
 	.footer_container{
-		height: 800px;
+		height: 900px;
 	}
 	
 	.address{
@@ -139,10 +158,16 @@
 		width: 190px;
 	}
 	
+	.footer_container{
+	height: 850px;
+	}
+	.copy_right{
+		font-size: 10px;
+	}
 }
 
 
-@media only screen and (max-width: 335px){
+@media only screen and (max-width: 355px){
 	
 	.map_iframe{
 		width: 250px;
@@ -160,6 +185,14 @@
 		width: 190px;
 	}
 	
+	.copy_right{
+		font-size: 12px;
+	}
+	
+	.footer_container{
+	height: 850px;
+	}
+	
 }
 
 
@@ -169,7 +202,7 @@
 @media only screen and (max-width: 315px){
 	
 	.map_iframe{
-		width: 250px;
+		width: 230px;
 		height: 250px;
 	}
 	
@@ -177,6 +210,14 @@
 		width: 240px;
 		font-size: 12px;
 		padding-top: 0px;
+	}
+	
+	.footer_container{
+	height: 820px;
+	}
+	
+	.copy_right{
+		font-size: 10px;
 	}
 
 }
