--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("../img/background/bg.png");
+	
 	bottom: 0px;
 }
 
@@ -90,6 +90,13 @@ a{
 	margin-bottom: 30px;
 }
 
+
+.devider_white{
+	width: 100%;
+	height: 2px;
+	border-top: 0.1px solid rgba(255,255,255,0.26);
+	margin: 2px 10px;
+}
 
 
 /*--------------sellection-----------------------*/
