--- a/css/banner.css
+++ b/css/banner.css
@@ -1,16 +1,33 @@
 /*-------------------BANNER--------------------*/
-.banner {
-	width: 1248px;
-	height: 312px;
-	background-image: url("../img/banner/banner1.jpg");
-	background-position: center;
-	background-size: cover;
+
+
+
+
+
+
+
+.banner_img{
+	width: 100%;
+}
+
+.banner_img2{
+	width: 90%;
+	display: none;
 }
 
 
 
 
 
+
+
+
+.details_number img{
+	width: 100%;
+	margin-right: 10px;
+	-webkit-touch-callout: none;
+	
+}
 
 
 
@@ -23,90 +40,48 @@
 /*-------------------@ media--------------------*/
 
 
-@media only screen and (max-width: 1300px) {
+@medi only screen and (max-width: 700px) {
  
-	.banner {
-	width: 1100px;
-	height: 275px;
+	.banner_img {
+	display: none;
 }
-}
-
-@media only screen and (max-width: 1140px) {
- 
-	.banner {
-	width: 900px;
-	height: 225px;
-}
-}
-
-@media only screen and (max-width: 940px) {
- 
-	.banner {
-	width: 800px;
-	height: 200px;
-}
-}
-
-@media only screen and (max-width: 840px) {
- 
-	.banner {
-	width: 700px;
-	height: 175px;
-}
-}
-
-@media only screen and (max-width: 740px) {
- 
-	.banner {
-	width: 600px;
-	height: 150px;
-}
-}
-
-@media only screen and (max-width: 640px) {
- 
-	.banner {
-	width: 500px;
-	height: 125px;
-}
-}
-
-@media only screen and (max-width: 540px) {
- 
-	.banner {
-	width: 400px;
-	height: 100px;
-}
-}
-
-
-/*_____________________________*/
-
-@media only screen and (max-width: 540px) {
- 
-	.banner {
-	width: 350px;
-	height: 233.3px;
-	background-image: url("../img/banner/banner2.jpg");
-}
+	
+	.banner_img2{
+		display: block;
+	}
 }
 
 
 
-@media only screen and (max-width: 440px) {
- 
-	.banner {
-	width: 300px;
-	height: 200px;
-	background-image: url("../img/banner/banner2.jpg");
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.banner_img{
+	width: 100%;
 }
 
-@media only screen and (max-width: 340px) {
- 
-	.banner {
-	width: 250px;
-	height: 166.6px;
-	background-image: url("../img/banner/banner2.jpg");
+
+
+
+
+
+
+
+
+.details_number img{
+	width: 100%;
+	margin-right: 10px;
+	-webkit-touch-callout: none;
+	
 }
-}
+
