--- a/css/service.css
+++ b/css/service.css
@@ -26,10 +26,13 @@
 	color: rgba(102,102,102,1.00);
 	text-align: center; 
 	font-family: arial; 
+	
+	margin-bottom:px;
+	height: 60px;
 
 }
 
-.new_service_container h{
+.new_service_container h2{
 	font-size: 20px;
 }
 
