--- a/css/container.css
+++ b/css/container.css
@@ -1,6 +1,6 @@
 /*--------------Container----------------------------*/
 .container{
-	
+	width: auto;
 	margin-left: 10px;
 	margin-right: 10px;
   	background-color: white;
