--- a/engine1/style.css
+++ b/engine1/style.css
@@ -8,8 +8,8 @@
 	zoom: 1; 
 	position: relative;
 	width: 100%;
-	max-width: 100%;
-	max-height:380px;
+	max-width: 1100px;
+	max-height:400px;
 	margin:0px auto 0px;
 	z-index:90;
 	text-align:left; /* reset align=center */
@@ -21,7 +21,7 @@
 	-moz-box-sizing: content-box;
 	box-sizing: content-box; 
 }
-* html #wowslider-container1{ width:1360px }
+* html #wowslider-container1{ width:1100px }
 #wowslider-container1 .ws_images ul{
 	position:relative;
 	width: 10000%; 
@@ -51,8 +51,8 @@
 	left:0;
 	top:0;
 	height:100%;
-	max-height:380px;
-	max-width: 100%;
+	max-height:400px;
+	max-width: 1100px;
 	vertical-align: top;
 	border:none;
 	overflow: hidden;
@@ -60,7 +60,7 @@
 #wowslider-container1 .ws_images ul a{
 	width:100%;
 	height:100%;
-	max-height:380px;
+	max-height:400px;
 	display:block;
 	color:transparent;
 }
@@ -76,7 +76,7 @@
 	margin:0;
 }
 #wowslider-container1 .ws_images > div > img {
-	max-height:380px;
+	max-height:400px;
 }
 
 #wowslider-container1 .ws_images iframe {
@@ -558,7 +558,7 @@
 
 	bottom:-8px;
 	margin-left:-7px;
-	left:86px;
+	left:66px;
 }#wowslider-container1 .ws-title{
 	position: absolute;	
 	font: 1.4em 'Khula',sans-serif;
@@ -605,7 +605,7 @@
 	text-indent:0;
 	display:block;
 	bottom:5px;
-	left:-86px;
+	left:-66px;
 	visibility:hidden;
 	position:absolute;
     border: 1px solid #ffffff;
@@ -624,7 +624,7 @@
 	left:0;
 	overflow:hidden;
 	position:relative;
-	width:171px;
+	width:132px;
 	background-color:#ffffff;
 }
 #wowslider-container1  .ws_bullets .ws_bulframe{
