--- a/css/service.css
+++ b/css/service.css
@@ -54,6 +54,105 @@
 
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*phone Service---------------------*/
+.phone_service_container{
+	display: none;
+}
+.phone_sevice_div{
+	width: 100px;
+	height: 100px;
+	
+
+	
+	margin: 16px 8px;
+	
+	background-color: white;
+	border: 1px solid rgba(63,63,63,0.76);
+	border-radius: 6px;
+	box-shadow: 1px 1px 2px rgba(5,5,5,0.44);
+	float: left;
+}
+
+
+
+.phone_sevice_div:hover{
+	border: 1px solid #F06477;
+	box-shadow: 1px 1px 3px rgba(5,5,5,0.44);
+	background-color: #EC2D48;
+	color: white;
+	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
+}
+
+.phone_sevice_div:active{
+	
+	box-shadow: 0px 0px 0px rgba(5,5,5,0.44);
+	background-color: #EC2D48;
+	-webkit-tap-highlight-color: transparent;
+}
+
+
+.phone_service_inner{
+	margin: 15px 2px;
+}
+
+
+.phone_sevice_div h2{
+	font-size: 12px;
+}
+
+.phone_sevice_div i{
+	font-size: 30px; margin-bottom: 3px;
+}
+
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 1315px){
 	.service_div_container{
 		height: 1200px;
@@ -70,44 +169,97 @@
 
 @media only screen and (max-width: 979px){
 	.service_div_container{
-		height: 1550px;
-		margin-left: 80px;
+		height: 0px;
+		margin-left: 0px;
 	}
-}
-
-@media only screen and (max-width: 860px){
-	.service_div_container{
-		height: 1550px;
-		margin-left: 20px;
+	
+	.phone_service_container{
+		height: 400px;
 	}
-}
-
-@media only screen and (max-width: 659px){
-	.new_sevice_div{
-		float: none;
+	
+	.new_service_container{
+		display: none;
 	}
-	.service_div_container{
-		height: 2780px;
-		margin-left: 50%;
-		transform: translate(-50%);
-		
+	.phone_service_container{
+		display: block;
 	}
 }
 	
-
-
-@media only screen and (max-width: 390px){
-	.new_sevice_div{
-		width: 220px;
-		height: 300px;
-	}
-	
-	.service_div_container{
-		height: 2620px;
-	}
-	.button2{
-		padding: 8px 10px;
+@media only screen and (max-width: 576px){
+	.phone_service_container{
+		height: 500px;
 	}
 }
+
+
+@media only screen and (max-width: 436px){
+	.phone_service_container{
+		height: 620px;
+		}
 	
+	.phone_service_div_container{
+		margin-left: 50px;
+	}
+	
+}
+
+
+@media only screen and (max-width: 355px){
+	
+	.phone_service_div_container{
+		margin-left: 40px;
+	}
+	
+}
+
+@media only screen and (max-width: 325px){
+	
+	.phone_service_div_container{
+		margin-left: 30px;
+	}
+	
+}
+
+@media only screen and (max-width: 312px){
+	
+	.phone_service_div_container{
+		margin-left: 10px;
+	}
+	
+}
+
+
+@media only screen and (max-width: 280px){
+	
+	.phone_service_div_container{
+		margin-left: 10px;
+	}
+	
+	.phone_sevice_div{
+	width: 80px;
+	height: 80px;
+}
+	
+	.phone_service_div_container h2{font-size: 10px;}
+	
+}
+
+
+@media only screen and (max-width: 260px){
+	
+	.phone_service_div_container{
+		margin-left: 0px;
+	}
+	
+}
+
+
+
+
+
+
+
+
+
+
 	
