--- a/css/footer.css
+++ b/css/footer.css
@@ -17,6 +17,18 @@
 	
 }
 
+.contact_footer_container{
+	width: 100%;
+	height: 100px;
+	background-color: #1D1D1D;
+	background-image: url("../img/background/.png");
+	
+	bottom: 0px;
+	padding-top: 16px;
+	padding-bottom: 0px;
+	
+}
+
 .address{
 	width: 360px;
 	height: 200px;
