--- a/css/service.css
+++ b/css/service.css
@@ -14,6 +14,10 @@
 }
 
 
+.phone_service_container a:link, a:visited{color: #151515;}
+.new_service_container a:link, a:visited{color: #151515;}
+
+
 
 .service_inner{
 	margin: 45px 20px;
@@ -37,7 +41,9 @@
 }
 
 
-
+.new_service_container img{
+	width: 60px;
+}
 
 
 
@@ -50,7 +56,7 @@
 
 .service_div_container{
 	width: 100%;
-	height: 800px;
+	height: 1100px;
 
 }
 
@@ -78,6 +84,10 @@
 /*phone Service---------------------*/
 .phone_service_container{
 	display: none;
+}
+
+.phone_service_container img{
+	width: 35px;
 }
 .phone_sevice_div{
 	width: 100px;
@@ -184,6 +194,12 @@
 		display: block;
 	}
 }
+
+@media only screen and (max-width: 720px){
+	.phone_service_container{
+		height: 600px;
+	}
+}
 	
 @media only screen and (max-width: 576px){
 	.phone_service_container{
@@ -192,9 +208,9 @@
 }
 
 
-@media only screen and (max-width: 436px){
+@media only screen and (max-width: 440px){
 	.phone_service_container{
-		height: 620px;
+		height: 700px;
 		}
 	
 	.phone_service_div_container{
@@ -231,7 +247,7 @@
 
 @media only screen and (max-width: 280px){
 	.phone_service_container{
-		height: 530px;
+		
 		}
 	.phone_service_div_container{
 		margin-left: 10px;
